fix(MetricsList): fix alignment for edge
Fixes INSTUI-940

Test plan:
- navigate to MetricsList component
- ensure the MetricsListItems display correctly (default
  is now to align center)
- cross-check in all browsers to ensure the fix works
  across the board
- lastly, within MetricsListItem add textAlign="end" or
  textAlign="start" to watch the elements switch - should
  work across all browsers the same

Reviewed-on: https://gerrit.instructure.com/138166
Product-Review: Jennifer Stern <jstern@instructure.com>
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-core/src/components/MetricsList/MetricsListItem/styles.css
+++ b/packages/ui-core/src/components/MetricsList/MetricsListItem/styles.css
@@ -1,15 +1,23 @@
 .root {
   display: flex;
   flex-direction: column-reverse;
-
   box-sizing: border-box;
+
   padding: var(--padding);
-
-  justify-self: space-around;
-
   text-align: var(--textAlign);
-
   font-family: var(--fontFamily);
+
+  &.start {
+    text-align: left;
+  }
+
+  &.center {
+    text-align: center;
+  }
+
+  &.end {
+    text-align: right;
+  }
 }
 
 .label {
